// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#handleEndRoundWithSidePot ALL should have the same amount 1`] = `
Object {
  "action": Object {
    "big": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
    "button": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
    "communityCards": Array [
      "ce",
      "b7",
      "ab",
      "d4",
      "c6",
    ],
    "deck": Array [
      null,
      "d2",
      "d3",
      null,
      "d5",
      "d6",
      "d7",
      "d8",
      "d9",
      "da",
      "db",
      "dd",
      null,
      "c1",
      "c2",
      "c3",
      "c4",
      "c5",
      null,
      "c7",
      "c8",
      "c9",
      "ca",
      "cb",
      "cd",
      null,
      null,
      null,
      "b3",
      "b4",
      "b5",
      "b6",
      null,
      "b8",
      null,
      "ba",
      "bb",
      "bd",
      "be",
      "a1",
      null,
      null,
      null,
      "a5",
      "a6",
      null,
      "a8",
      "a9",
      "aa",
      null,
      "ad",
      "ae",
    ],
    "groupID": "group:016650b1-8c11-41e3-b00f-a616469a3b1b",
    "id": "action:20ffb4b3-7fab-437c-be1e-cbd0efb8e00c",
    "pot": 0,
    "queued": Object {},
    "round": 4,
    "sidePot": Array [
      Object {
        "id": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
        "sum": 140,
      },
      Object {
        "id": "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
        "sum": 140,
      },
    ],
    "small": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
    "turn": Object {
      "user:0f3bd090-e991-425a-8978-71ad27164510": Object {
        "bet": 0,
        "cards": Array [
          "a7",
          "b2",
        ],
        "hand": 8,
        "handParsed": Object {
          "highCards": Array [
            14,
            11,
            7,
            6,
            4,
            2,
          ],
          "onHand": Array [
            8,
          ],
          "parsed": Object {
            "cards": Object {
              "clubs": Array [
                4,
              ],
              "diamonds": Array [
                6,
                14,
              ],
              "hearts": Array [
                2,
                7,
              ],
              "spades": Array [
                7,
                11,
              ],
            },
            "flush": Object {
              "clubs": false,
              "diamonds": false,
              "hearts": false,
              "spades": false,
            },
            "fourOfAKinds": Array [],
            "pairs": Array [
              "7",
            ],
            "same": Object {
              "1": 0,
              "10": 0,
              "11": 1,
              "13": 0,
              "14": 1,
              "2": 1,
              "3": 0,
              "4": 1,
              "5": 0,
              "6": 1,
              "7": 2,
              "8": 0,
              "9": 0,
            },
            "straightFlushes": Array [],
            "threeOfAKinds": Array [],
          },
        },
        "status": "fold",
      },
      "user:63d94748-7134-4d5c-b3f9-612f9c0520c4": Object {
        "bet": 140,
        "cards": Array [
          "b9",
          "a4",
        ],
        "hand": 8,
        "handParsed": Object {
          "highCards": Array [
            14,
            11,
            9,
            7,
            6,
            4,
          ],
          "onHand": Array [
            8,
          ],
          "parsed": Object {
            "cards": Object {
              "clubs": Array [
                4,
              ],
              "diamonds": Array [
                6,
                14,
              ],
              "hearts": Array [
                7,
                9,
              ],
              "spades": Array [
                4,
                11,
              ],
            },
            "flush": Object {
              "clubs": false,
              "diamonds": false,
              "hearts": false,
              "spades": false,
            },
            "fourOfAKinds": Array [],
            "pairs": Array [
              "4",
            ],
            "same": Object {
              "1": 0,
              "10": 0,
              "11": 1,
              "13": 0,
              "14": 1,
              "2": 0,
              "3": 0,
              "4": 2,
              "5": 0,
              "6": 1,
              "7": 1,
              "8": 0,
              "9": 1,
            },
            "straightFlushes": Array [],
            "threeOfAKinds": Array [],
          },
        },
        "status": "allIn",
      },
      "user:f7fefb97-1cd6-4507-b312-611d157a65bf": Object {
        "bet": 140,
        "cards": Array [
          "de",
          "a3",
        ],
        "hand": 8,
        "handParsed": Object {
          "highCards": Array [
            14,
            11,
            7,
            6,
            4,
            3,
          ],
          "onHand": Array [
            8,
          ],
          "parsed": Object {
            "cards": Object {
              "clubs": Array [
                4,
                14,
              ],
              "diamonds": Array [
                6,
                14,
              ],
              "hearts": Array [
                7,
              ],
              "spades": Array [
                3,
                11,
              ],
            },
            "flush": Object {
              "clubs": false,
              "diamonds": false,
              "hearts": false,
              "spades": false,
            },
            "fourOfAKinds": Array [],
            "pairs": Array [
              "14",
            ],
            "same": Object {
              "1": 0,
              "10": 0,
              "11": 1,
              "13": 0,
              "14": 2,
              "2": 0,
              "3": 1,
              "4": 1,
              "5": 0,
              "6": 1,
              "7": 1,
              "8": 0,
              "9": 0,
            },
            "straightFlushes": Array [],
            "threeOfAKinds": Array [],
          },
        },
        "status": "allIn",
      },
    },
    "winners": Array [
      Array [
        "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
        "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
      ],
    ],
  },
  "group": Object {
    "action": "action:20ffb4b3-7fab-437c-be1e-cbd0efb8e00c",
    "blind": Object {
      "big": 2,
      "small": 1,
    },
    "id": "group:016650b1-8c11-41e3-b00f-a616469a3b1b",
    "name": "super-duper-normal",
    "owner": "user:0f3bd090-e991-425a-8978-71ad27164510",
    "pub": true,
    "startSum": 140,
    "users": Array [
      Object {
        "id": "user:0f3bd090-e991-425a-8978-71ad27164510",
        "sum": 140,
      },
      Object {
        "id": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
        "sum": 140,
      },
      Object {
        "id": "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
        "sum": 140,
      },
    ],
  },
  "pot": 0,
}
`;

exports[`#handleEndRoundWithSidePot will not be a draw, if api decides (pair in 7 is not as high as kings) 1`] = `
Object {
  "action": Object {
    "big": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
    "button": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
    "communityCards": Array [
      "ce",
      "b7",
      "ab",
      "d4",
      "c6",
    ],
    "deck": Array [
      null,
      "d2",
      "d3",
      null,
      "d5",
      "d6",
      "d7",
      "d8",
      "d9",
      "da",
      "db",
      "dd",
      null,
      "c1",
      "c2",
      "c3",
      "c4",
      "c5",
      null,
      "c7",
      "c8",
      "c9",
      "ca",
      "cb",
      "cd",
      null,
      null,
      null,
      "b3",
      "b4",
      "b5",
      "b6",
      null,
      "b8",
      null,
      "ba",
      "bb",
      "bd",
      "be",
      "a1",
      null,
      null,
      null,
      "a5",
      "a6",
      null,
      "a8",
      "a9",
      "aa",
      null,
      "ad",
      "ae",
    ],
    "groupID": "group:016650b1-8c11-41e3-b00f-a616469a3b1b",
    "id": "action:20ffb4b3-7fab-437c-be1e-cbd0efb8e00c",
    "pot": 0,
    "queued": Object {},
    "round": 4,
    "sidePot": Array [
      Object {
        "id": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
        "sum": 140,
      },
      Object {
        "id": "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
        "sum": 140,
      },
    ],
    "small": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
    "turn": Object {
      "user:0f3bd090-e991-425a-8978-71ad27164510": Object {
        "bet": 0,
        "cards": Array [
          "a7",
          "b2",
        ],
        "hand": 8,
        "handParsed": Object {
          "highCards": Array [
            14,
            11,
            7,
            6,
            4,
            2,
          ],
          "onHand": Array [
            8,
          ],
          "parsed": Object {
            "cards": Object {
              "clubs": Array [
                4,
              ],
              "diamonds": Array [
                6,
                14,
              ],
              "hearts": Array [
                2,
                7,
              ],
              "spades": Array [
                7,
                11,
              ],
            },
            "flush": Object {
              "clubs": false,
              "diamonds": false,
              "hearts": false,
              "spades": false,
            },
            "fourOfAKinds": Array [],
            "pairs": Array [
              "7",
            ],
            "same": Object {
              "1": 0,
              "10": 0,
              "11": 1,
              "13": 0,
              "14": 1,
              "2": 1,
              "3": 0,
              "4": 1,
              "5": 0,
              "6": 1,
              "7": 2,
              "8": 0,
              "9": 0,
            },
            "straightFlushes": Array [],
            "threeOfAKinds": Array [],
          },
        },
        "status": "fold",
      },
      "user:63d94748-7134-4d5c-b3f9-612f9c0520c4": Object {
        "bet": 140,
        "cards": Array [
          "b9",
          "a4",
        ],
        "hand": 8,
        "handParsed": Object {
          "highCards": Array [
            14,
            11,
            9,
            7,
            6,
            4,
          ],
          "onHand": Array [
            8,
          ],
          "parsed": Object {
            "cards": Object {
              "clubs": Array [
                4,
              ],
              "diamonds": Array [
                6,
                14,
              ],
              "hearts": Array [
                7,
                9,
              ],
              "spades": Array [
                4,
                11,
              ],
            },
            "flush": Object {
              "clubs": false,
              "diamonds": false,
              "hearts": false,
              "spades": false,
            },
            "fourOfAKinds": Array [],
            "pairs": Array [
              "4",
            ],
            "same": Object {
              "1": 0,
              "10": 0,
              "11": 1,
              "13": 0,
              "14": 1,
              "2": 0,
              "3": 0,
              "4": 2,
              "5": 0,
              "6": 1,
              "7": 1,
              "8": 0,
              "9": 1,
            },
            "straightFlushes": Array [],
            "threeOfAKinds": Array [],
          },
        },
        "status": "allIn",
      },
      "user:f7fefb97-1cd6-4507-b312-611d157a65bf": Object {
        "bet": 140,
        "cards": Array [
          "de",
          "a3",
        ],
        "hand": 8,
        "handParsed": Object {
          "highCards": Array [
            14,
            11,
            7,
            6,
            4,
            3,
          ],
          "onHand": Array [
            8,
          ],
          "parsed": Object {
            "cards": Object {
              "clubs": Array [
                4,
                14,
              ],
              "diamonds": Array [
                6,
                14,
              ],
              "hearts": Array [
                7,
              ],
              "spades": Array [
                3,
                11,
              ],
            },
            "flush": Object {
              "clubs": false,
              "diamonds": false,
              "hearts": false,
              "spades": false,
            },
            "fourOfAKinds": Array [],
            "pairs": Array [
              "14",
            ],
            "same": Object {
              "1": 0,
              "10": 0,
              "11": 1,
              "13": 0,
              "14": 2,
              "2": 0,
              "3": 1,
              "4": 1,
              "5": 0,
              "6": 1,
              "7": 1,
              "8": 0,
              "9": 0,
            },
            "straightFlushes": Array [],
            "threeOfAKinds": Array [],
          },
        },
        "status": "allIn",
      },
    },
    "winners": Array [
      Array [
        "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
      ],
      Array [
        "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
      ],
    ],
  },
  "group": Object {
    "action": "action:20ffb4b3-7fab-437c-be1e-cbd0efb8e00c",
    "blind": Object {
      "big": 2,
      "small": 1,
    },
    "id": "group:016650b1-8c11-41e3-b00f-a616469a3b1b",
    "name": "super-duper-normal",
    "owner": "user:0f3bd090-e991-425a-8978-71ad27164510",
    "pub": true,
    "startSum": 140,
    "users": Array [
      Object {
        "id": "user:0f3bd090-e991-425a-8978-71ad27164510",
        "sum": 140,
      },
      Object {
        "id": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
        "sum": 0,
      },
      Object {
        "id": "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
        "sum": 280,
      },
    ],
  },
  "pot": 0,
}
`;

exports[`#handleUpdate should not end round 1`] = `
Object {
  "big": "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
  "button": "user:0f3bd090-e991-425a-8978-71ad27164510",
  "communityCards": Array [],
  "deck": Array [
    "d1",
    "d2",
    "d3",
    "d4",
    "d5",
    "d6",
    "d7",
    "d8",
    "d9",
    "da",
    "db",
    "dd",
    "de",
    "c1",
    "c2",
    "c3",
    "c4",
    "c5",
    "c6",
    "c7",
    "c8",
    "c9",
    "ca",
    "cb",
    "cd",
    "ce",
    "b1",
    "b2",
    "b3",
    "b4",
    "b5",
    "b6",
    "b7",
    "b8",
    "b9",
    "ba",
    "bb",
    "bd",
    "be",
    "a1",
    "a2",
    "a3",
    "a4",
    "a5",
    "a6",
    "a7",
    "a8",
    "a9",
    "aa",
    "ab",
    "ad",
    "ae",
  ],
  "groupID": "group:016650b1-8c11-41e3-b00f-a616469a3b1b",
  "id": "action:7cc3e3d1-3f38-4b04-9d23-9de6372bc142",
  "pot": 22,
  "queued": Object {},
  "round": 0,
  "sidePot": Array [
    Object {
      "id": "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
      "sum": 14,
    },
  ],
  "small": "user:0f3bd090-e991-425a-8978-71ad27164510",
  "turn": Object {
    "user:0f3bd090-e991-425a-8978-71ad27164510": Object {
      "bet": 2,
      "status": "bet",
    },
    "user:63d94748-7134-4d5c-b3f9-612f9c0520c4": Object {
      "bet": 2,
      "status": "fold",
    },
    "user:f7fefb97-1cd6-4507-b312-611d157a65bf": Object {
      "bet": 14,
      "status": "allIn",
    },
  },
}
`;

exports[`#handleUpdate should not end round 2`] = `
Object {
  "action": "action:7cc3e3d1-3f38-4b04-9d23-9de6372bc142",
  "blind": Object {
    "big": 2,
    "small": 1,
  },
  "id": "group:016650b1-8c11-41e3-b00f-a616469a3b1b",
  "name": "super-duper-normal",
  "owner": "user:0f3bd090-e991-425a-8978-71ad27164510",
  "startSum": 140,
  "users": Array [
    Object {
      "id": "user:0f3bd090-e991-425a-8978-71ad27164510",
      "sum": 28,
    },
    Object {
      "id": "user:63d94748-7134-4d5c-b3f9-612f9c0520c4",
      "sum": 370,
    },
    Object {
      "id": "user:f7fefb97-1cd6-4507-b312-611d157a65bf",
      "sum": 0,
    },
  ],
}
`;
